# spring_boot_tests_2

./: .gitignore  README.md
app/: README.md
my_test_runs/: README.md  all-report.html  locust-report.html
spring-boot-tests/: .gitignore  README.md  TEST_COVERAGE.md  pyproject.toml
spring-boot-tests/config/environments/: local.yaml
spring-boot-tests/config/wiremock/: README.md
spring-boot-tests/config/wiremock/mappings/: auth-error.json  auth-success.json  auth-timeout.json  doaction-error.json  doaction-success.json
spring-boot-tests/docker/: Dockerfile.test  docker-compose.test.yml
spring-boot-tests/reports/: .gitkeep  coverage.md
spring-boot-tests/scripts/: generate_coverage_report.py
spring-boot-tests/src/test_framework/: __init__.py
spring-boot-tests/src/test_framework/assertions/: __init__.py
spring-boot-tests/src/test_framework/clients/: __init__.py  api_client.py
spring-boot-tests/src/test_framework/fixtures/: __init__.py  token.py
spring-boot-tests/src/test_framework/models/: __init__.py  response.py
spring-boot-tests/tests/: __init__.py
spring-boot-tests/tests/api/: __init__.py  conftest.py  test_endpoint.py
spring-boot-tests/tests/contract/: conftest.py  test_openapi.py
spring-boot-tests/tests/integration/: conftest.py  test_auth_flow.py  test_external_service_integration.py  test_negative_scenarios.py
spring-boot-tests/tests/performance/: README.md  locustfile.py  run_load_tests.sh
